--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,6 +9,8 @@ jobs:
   gh_pages: 
     runs-on: ubuntu-latest
     steps:
-    - uses: crazy-max/ghaction-github-pages@v2.1.3
-    - with:
-        build_dir: .
+      -
+        name: GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          build_dir: .
