--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,3 +14,12 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           build_dir: .
+      -
+         name: Deploy
+         if: success()
+         uses: ./
+         with:
+           target_branch: gh-pages
+           build_dir: public
+         env:
+           GH_PAT: ${{ secrets.GH_PAT }}
