--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,7 +13,8 @@ jobs:
         name: GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          build_dir: .
+          build_dir: ./
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Deploy
         if: success()
