--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,16 +12,14 @@ jobs:
       -
         name: GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          build_dir: ./
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Deploy
-        if: success()
-        uses: ./
-        with:
-          target_branch: gh-pages
-          build_dir: public
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       -
+#         name: Deploy
+#         if: success()
+#         uses: ./
+#         with:
+#           target_branch: gh-pages
+#           build_dir: public
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
