--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: gh-pages
-          build_dir: ../../
+          build_dir: ../
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
