--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,12 +9,16 @@ jobs:
   gh_pages: 
     runs-on: ubuntu-latest
     steps:
+      - 
+        name: Pull
+        run: |
+          git clone git@github.com:dimuzone/bus-dating dist
       -
-        name: Deploy to GitHub Pages
+        name: Deploy
         if: success()
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: gh-pages
-          build_dir: ../../../
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
