--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,13 +12,25 @@ jobs:
       - 
         name: Pull
         run: |
-          git clone https://github.com/dimuzone/bus-dating dist
+          mkdir public
+          cat > public/index.html <<EOL
+          <!doctype html>
+          <html>
+            <head>
+              <title>GitHub Pages deployed!</title>
+            </head>
+            <body>
+              <p>GitHub Pages with <strong>${{ github.sha }}</strong> commit ID has been deployed through <a href="https://github.com/marketplace/actions/github-pages">GitHub Pages action</a> successfully.</p>
+            </body>
+          </html>
+          EOL
+#         git clone https://github.com/dimuzone/bus-dating dist
       -
         name: Deploy
         if: success()
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: gh-pages
-          build_dir: dist
+          build_dir: public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
